--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png"/>
-    <title>UBS Demo/AzureAI</title>
+    <title>POC Demo</title>
 </head>
 <body>
     <div class="background">
     <div class="buttonBg">
         <a href="login.html" class="button"></a>
     </div>
-<!-- button generation date: 2024-01-30 version: 2.0.5 -->
-<a class="start_chat_button" href="#"><img src="https://demo.spitch.chat/button.php?location=AzureAI" border="0"/></a>
+<!-- button generation date: 2024-01-31 version: 2.0.5 -->
+<a class="start_chat_button" href="#"><img src="https://demo.spitch.chat/button.php?location=BankPOC" border="0"/></a>
 <script type="text/javascript">
 
   chatLocationData = {
     accountName: "demo",
     domain: "demo.spitch.chat",
-    location: "AzureAI"
+    location: "BankPOC"
   };
   (function () {
       var s = document.createElement("script");
